# portaldot-hackathon-2026-sparrow-protocol-sparrow-protocol

./: .gitignore  README.md
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: ChartPanel.tsx  Header.tsx  RightPanel.tsx  Toasts.tsx
client/app/components/lend/: FixedTerm.tsx  VariablePool.tsx
client/app/components/trade/: PositionsTable.tsx  TradePanel.tsx
client/app/context/: ChainContext.tsx
client/app/hooks/: useChain.ts  usePoolData.ts
client/app/lend/: page.tsx
client/app/trade/: page.tsx
client/public/contracts/: sparrowlend.contract  sparrowmargin.contract
sparrowlend/: Cargo.toml  check_pending.py  check_tx.py  deploy.js  deploy.py  get_contract_address.py  package-lock.json  package.json
sparrowlend/.cargo/: config.toml
sparrowlend/src/: lib.rs
sparrowmargin/: Cargo.toml  rust-toolchain.toml
sparrowmargin/src/: lib.rs
test/: sparrow_tests.rs
