[workspace]

[package]
name = "sparrowlend"
version = "2.0.0"
edition = "2021"
authors = ["Sparrow Protocol"]
description = "SparrowLend — Portaldot native money market"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "4.3.0" }

[lib]
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std", 
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
overflow-checks = false